move to akka-http-m2

--- a/preview/backend/src/main/resources/application.conf
+++ b/preview/backend/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 app {
-  host = "localhost"
-  port = 1234
+  host = "0.0.0.0"
+  port = 2222
   secret="OMxgxWJ_`ATJ0x=R^a3TxqSUXOn5Lo^uBGsTe640D?aOv2^[>WJm/Rwh<H?2H2ta"
 }
